--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
    "python.pythonPath": "/home/knapanda/.virtualenvs/tf-2.3.1/bin/python",
    "python.linting.pylintEnabled": false,
-   "python.linting.flake8Enabled": true,
-   "python.linting.enabled": true,
+   "python.linting.flake8Enabled": false,
+   "python.linting.enabled": false,
+   "python.formatting.provider": "black",
+   "editor.formatOnSave": true,
+   "editor.defaultFormatter": null,
    "[python]":{
       "editor.tabSize": 4
     }
