--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {
-   "python.pythonPath": "/home/knapanda/.virtualenvs/tf-2.3.1/bin/python",
+   "python.pythonPath": "/home/karan/.virtualenvs/tf-2.3.1/bin/python",
    "python.linting.pylintEnabled": false,
    "python.linting.flake8Enabled": false,
    "python.linting.enabled": false,
-   "python.formatting.provider": "autopep8",
+   "python.formatting.provider": "black",
    "editor.formatOnSave": true,
    "editor.defaultFormatter": null,
    "[python]": {
