--- a/configs/darknet53.config
+++ b/configs/darknet53.config
@@ -435,3 +435,46 @@ network_def {
         id: 38
     }
 }
+
+train_config {
+    dataset: "/path/to/random/dataset"
+    epochs: 100
+    batch_size: 4
+    optimizer_config {
+        sgd_optimizer {
+        }
+        exponential_decay {
+            initial_learning_rate: 0.003
+            decay_steps: 3000
+            decay_rate: 0.85
+            staircase: true
+        }
+    }
+}
+
+model_specs {
+    image_height: 416
+    image_width: 416
+    num_classes: 1
+}
+
+eval_config {
+    dataset: "/path/to/another_random/dataset"
+    batch_size: 2
+    num_examples_visualize: 10
+}
+
+class_def {
+    class_map {
+        class_name: "TLRed"
+        class_id: 1
+    }
+    class_map {
+        class_name: "TLYellow"
+        class_id: 2
+    }
+    class_map {
+        class_name: "TLGreen"
+        class_id: 3
+    }
+}
