--- a/configs/darknet53.config
+++ b/configs/darknet53.config
@@ -437,19 +437,20 @@ network_def {
 }
 
 train_config {
-    dataset: "/path/to/random/dataset"
+    dataset: "/home/karan/knapanda_local/playground/yolov3-tf2/data/sample/train.record"
     epochs: 100
-    batch_size: 4
+    batch_size: 2
     optimizer_config {
         sgd_optimizer {
         }
         exponential_decay {
             initial_learning_rate: 0.003
-            decay_steps: 3000
+            decay_steps: 30
             decay_rate: 0.85
             staircase: true
         }
     }
+    log: "/home/karan/knapanda_local/playground/training_logs"
 }
 
 model_specs {
@@ -459,22 +460,14 @@ model_specs {
 }
 
 eval_config {
-    dataset: "/path/to/another_random/dataset"
+    dataset: "/home/karan/knapanda_local/playground/yolov3-tf2/data/sample/validation.record"
     batch_size: 2
     num_examples_visualize: 10
 }
 
 class_def {
     class_map {
-        class_name: "TLRed"
+        class_name: "Dog"
         class_id: 1
-    }
-    class_map {
-        class_name: "TLYellow"
-        class_id: 2
-    }
-    class_map {
-        class_name: "TLGreen"
-        class_id: 3
     }
 }
