Debugging Loss. Shifting back to the main branch to debug loss issues

--- a/configs/darknet53.config
+++ b/configs/darknet53.config
@@ -437,8 +437,8 @@ network_def {
 }
 
 train_config {
-    dataset: "/home/karan/knapanda_local/playground/yolov3-tf2/data/sample/train.record"
-    epochs: 100
+    dataset: "data/sample/train.record"
+    epochs: 50
     batch_size: 2
     optimizer_config {
         sgd_optimizer {
@@ -450,7 +450,7 @@ train_config {
             staircase: true
         }
     }
-    log: "/home/karan/knapanda_local/playground/training_logs"
+    log: "training_logs/"
 }
 
 model_specs {
@@ -460,7 +460,7 @@ model_specs {
 }
 
 eval_config {
-    dataset: "/home/karan/knapanda_local/playground/yolov3-tf2/data/sample/validation.record"
+    dataset: "data/sample/validation.record"
     batch_size: 2
     num_examples_visualize: 10
 }
